tests/neg-custom-args/extmethods-tparams.scala
def (self: T) foo[T] = ??? // error
def [T1](self: T1) bar[T2] = ??? // error